--- a/_posts/0000-01-02-ducommun.md
+++ b/_posts/0000-01-02-ducommun.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Some new text
+Some new text, and some more
 Use the left arrow to go back!
